--- a/src/features/news-dashboard/NewsDashboard.css
+++ b/src/features/news-dashboard/NewsDashboard.css
@@ -8,3 +8,12 @@
     justify-content: space-between;
     width: 130px;
 }
+
+@media only screen and (max-width: 767px) {
+  /* For mobile phones: */
+  .news-dashboard__countries-list {
+  	display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
